parser.out
Grammar:

Rule 0     S' -> program
Rule 1     program -> instructions_opt
Rule 2     instructions_opt -> <empty>
Rule 3     instructions_opt -> instructions
Rule 4     instructions -> { instructions }
Rule 5     instructions -> instruction
Rule 6     instructions -> instructions instruction
Rule 7     instruction -> RETURN list ;
Rule 8     instruction -> CONTINUE ;
Rule 9     instruction -> BREAK ;
Rule 10    instruction -> PRINT list ;
Rule 11    instruction -> loop
Rule 12    instruction -> conditional
Rule 13    instruction -> assignment ;
Rule 14    block -> instruction
Rule 15    block -> { instructions }
Rule 16    expression -> expression NEQ expression  [precedence=nonassoc, level=3]
Rule 17    expression -> expression EQ expression  [precedence=nonassoc, level=3]
Rule 18    expression -> expression GRTEQ expression  [precedence=nonassoc, level=3]
Rule 19    expression -> expression LESEQ expression  [precedence=nonassoc, level=3]
Rule 20    expression -> expression > expression  [precedence=nonassoc, level=3]
Rule 21    expression -> expression < expression  [precedence=nonassoc, level=3]
Rule 22    expression -> [ list ]
Rule 23    expression -> ( expression )
Rule 24    expression -> matrix_function
Rule 25    expression -> expression / expression  [precedence=left, level=5]
Rule 26    expression -> expression * expression  [precedence=left, level=5]
Rule 27    expression -> expression - expression  [precedence=left, level=4]
Rule 28    expression -> expression + expression  [precedence=left, level=4]
Rule 29    expression -> expression DOTDIV expression  [precedence=left, level=5]
Rule 30    expression -> expression DOTMUL expression  [precedence=left, level=5]
Rule 31    expression -> expression DOTSUB expression  [precedence=left, level=4]
Rule 32    expression -> expression DOTADD expression  [precedence=left, level=4]
Rule 33    expression -> variable
Rule 34    expression -> STRING
Rule 35    expression -> FLOATNUM
Rule 36    expression -> INTNUM
Rule 37    expression -> expression '  [precedence=right, level=8]
Rule 38    expression -> - expression  [precedence=right, level=7]
Rule 39    variable -> reference
Rule 40    variable -> ID
Rule 41    assignment -> variable DIVASSIGN expression
Rule 42    assignment -> variable MULASSIGN expression
Rule 43    assignment -> variable SUBASSIGN expression
Rule 44    assignment -> variable ADDASSIGN expression
Rule 45    assignment -> variable = expression
Rule 46    reference -> expression [ expression , expression ]
Rule 47    list -> expression
Rule 48    list -> expression , list
Rule 49    matrix_function -> EYE ( list )
Rule 50    matrix_function -> ONES ( list )
Rule 51    matrix_function -> ZEROS ( list )
Rule 52    conditional -> IF ( expression ) block  [precedence=nonassoc, level=1]
Rule 53    conditional -> IF ( expression ) block ELSE block  [precedence=nonassoc, level=2]
Rule 54    loop -> FOR expression = range block
Rule 55    loop -> WHILE ( expression ) block
Rule 56    range -> expression : expression  [precedence=nonassoc, level=6]

Terminals, with rules where they appear:

'                    : 37
(                    : 23 49 50 51 52 53 55
)                    : 23 49 50 51 52 53 55
*                    : 26
+                    : 28
,                    : 46 48
-                    : 27 38
/                    : 25
:                    : 56
;                    : 7 8 9 10 13
<                    : 21
=                    : 45 54
>                    : 20
ADDASSIGN            : 44
BREAK                : 9
CONTINUE             : 8
DIVASSIGN            : 41
DOTADD               : 32
DOTDIV               : 29
DOTMUL               : 30
DOTSUB               : 31
ELSE                 : 53
EQ                   : 17
EYE                  : 49
FLOATNUM             : 35
FOR                  : 54
GRTEQ                : 18
ID                   : 40
IF                   : 52 53
INTNUM               : 36
LESEQ                : 19
MULASSIGN            : 42
NEQ                  : 16
ONES                 : 50
PRINT                : 10
RETURN               : 7
STRING               : 34
SUBASSIGN            : 43
WHILE                : 55
ZEROS                : 51
[                    : 22 46
]                    : 22 46
error                : 
{                    : 4 15
}                    : 4 15

Nonterminals, with rules where they appear:

assignment           : 13
block                : 52 53 53 54 55
conditional          : 12
expression           : 16 16 17 17 18 18 19 19 20 20 21 21 23 25 25 26 26 27 27 28 28 29 29 30 30 31 31 32 32 37 38 41 42 43 44 45 46 46 46 47 48 52 53 54 55 56 56
instruction          : 5 6 14
instructions         : 3 4 6 15
instructions_opt     : 1
list                 : 7 10 22 48 49 50 51
loop                 : 11
matrix_function      : 24
program              : 0
range                : 54
reference            : 39
variable             : 33 41 42 43 44 45


state 0

    (0) S' -> . program
    (1) program -> . instructions_opt
    (2) instructions_opt -> .
    (3) instructions_opt -> . instructions
    (4) instructions -> . { instructions }
    (5) instructions -> . instruction
    (6) instructions -> . instructions instruction
    (7) instruction -> . RETURN list ;
    (8) instruction -> . CONTINUE ;
    (9) instruction -> . BREAK ;
    (10) instruction -> . PRINT list ;
    (11) instruction -> . loop
    (12) instruction -> . conditional
    (13) instruction -> . assignment ;
    (54) loop -> . FOR expression = range block
    (55) loop -> . WHILE ( expression ) block
    (52) conditional -> . IF ( expression ) block
    (53) conditional -> . IF ( expression ) block ELSE block
    (41) assignment -> . variable DIVASSIGN expression
    (42) assignment -> . variable MULASSIGN expression
    (43) assignment -> . variable SUBASSIGN expression
    (44) assignment -> . variable ADDASSIGN expression
    (45) assignment -> . variable = expression
    (39) variable -> . reference
    (40) variable -> . ID
    (46) reference -> . expression [ expression , expression ]
    (16) expression -> . expression NEQ expression
    (17) expression -> . expression EQ expression
    (18) expression -> . expression GRTEQ expression
    (19) expression -> . expression LESEQ expression
    (20) expression -> . expression > expression
    (21) expression -> . expression < expression
    (22) expression -> . [ list ]
    (23) expression -> . ( expression )
    (24) expression -> . matrix_function
    (25) expression -> . expression / expression
    (26) expression -> . expression * expression
    (27) expression -> . expression - expression
    (28) expression -> . expression + expression
    (29) expression -> . expression DOTDIV expression
    (30) expression -> . expression DOTMUL expression
    (31) expression -> . expression DOTSUB expression
    (32) expression -> . expression DOTADD expression
    (33) expression -> . variable
    (34) expression -> . STRING
    (35) expression -> . FLOATNUM
    (36) expression -> . INTNUM
    (37) expression -> . expression '
    (38) expression -> . - expression
    (49) matrix_function -> . EYE ( list )
    (50) matrix_function -> . ONES ( list )
    (51) matrix_function -> . ZEROS ( list )
    $end            reduce using rule 2 (instructions_opt -> .)
    {               shift and go to state 4
    RETURN          shift and go to state 6
    CONTINUE        shift and go to state 7
    BREAK           shift and go to state 8
    PRINT           shift and go to state 9
    FOR             shift and go to state 13
    WHILE           shift and go to state 15
    IF              shift and go to state 17
    ID              shift and go to state 20
    [               shift and go to state 21
    (               shift and go to state 16
    STRING          shift and go to state 24
    FLOATNUM        shift and go to state 25
    INTNUM          shift and go to state 26
    -               shift and go to state 23
    EYE             shift and go to state 27
    ONES            shift and go to state 28
    ZEROS           shift and go to state 29

    program                        shift and go to state 1
    instructions_opt               shift and go to state 2
    instructions                   shift and go to state 3
    instruction                    shift and go to state 5
    loop                           shift and go to state 10
    conditional                    shift and go to state 11
    assignment                     shift and go to state 12
    expression                     shift and go to state 14
    variable                       shift and go to state 18
    reference                      shift and go to state 19
    matrix_function                shift and go to state 22

state 1

    (0) S' -> program .


state 2

    (1) program -> instructions_opt .
    $end            reduce using rule 1 (program -> instructions_opt .)


state 3

    (3) instructions_opt -> instructions .
    (6) instructions -> instructions . instruction
    (7) instruction -> . RETURN list ;
    (8) instruction -> . CONTINUE ;
    (9) instruction -> . BREAK ;
    (10) instruction -> . PRINT list ;
    (11) instruction -> . loop
    (12) instruction -> . conditional
    (13) instruction -> . assignment ;
    (54) loop -> . FOR expression = range block
    (55) loop -> . WHILE ( expression ) block
    (52) conditional -> . IF ( expression ) block
    (53) conditional -> . IF ( expression ) block ELSE block
    (41) assignment -> . variable DIVASSIGN expression
    (42) assignment -> . variable MULASSIGN expression
    (43) assignment -> . variable SUBASSIGN expression
    (44) assignment -> . variable ADDASSIGN expression
    (45) assignment -> . variable = expression
    (39) variable -> . reference
    (40) variable -> . ID
    (46) reference -> . expression [ expression , expression ]
    (16) expression -> . expression NEQ expression
    (17) expression -> . expression EQ expression
    (18) expression -> . expression GRTEQ expression
    (19) expression -> . expression LESEQ expression
    (20) expression -> . expression > expression
    (21) expression -> . expression < expression
    (22) expression -> . [ list ]
    (23) expression -> . ( expression )
    (24) expression -> . matrix_function
    (25) expression -> . expression / expression
    (26) expression -> . expression * expression
    (27) expression -> . expression - expression
    (28) expression -> . expression + expression
    (29) expression -> . expression DOTDIV expression
    (30) expression -> . expression DOTMUL expression
    (31) expression -> . expression DOTSUB expression
    (32) expression -> . expression DOTADD expression
    (33) expression -> . variable
    (34) expression -> . STRING
    (35) expression -> . FLOATNUM
    (36) expression -> . INTNUM
    (37) expression -> . expression '
    (38) expression -> . - expression
    (49) matrix_function -> . EYE ( list )
    (50) matrix_function -> . ONES ( list )
    (51) matrix_function -> . ZEROS ( list )
    $end            reduce using rule 3 (instructions_opt -> instructions .)
    RETURN          shift and go to state 6
    CONTINUE        shift and go to state 7
    BREAK           shift and go to state 8
    PRINT           shift and go to state 9
    FOR             shift and go to state 13
    WHILE           shift and go to state 15
    IF              shift and go to state 17
    ID              shift and go to state 20
    [               shift and go to state 21
    (               shift and go to state 16
    STRING          shift and go to state 24
    FLOATNUM        shift and go to state 25
    INTNUM          shift and go to state 26
    -               shift and go to state 23
    EYE             shift and go to state 27
    ONES            shift and go to state 28
    ZEROS           shift and go to state 29

    instruction                    shift and go to state 30
    loop                           shift and go to state 10
    conditional                    shift and go to state 11
    assignment                     shift and go to state 12
    expression                     shift and go to state 14
    variable                       shift and go to state 18
    reference                      shift and go to state 19
    matrix_function                shift and go to state 22

state 4

    (4) instructions -> { . instructions }
    (4) instructions -> . { instructions }
    (5) instructions -> . instruction
    (6) instructions -> . instructions instruction
    (7) instruction -> . RETURN list ;
    (8) instruction -> . CONTINUE ;
    (9) instruction -> . BREAK ;
    (10) instruction -> . PRINT list ;
    (11) instruction -> . loop
    (12) instruction -> . conditional
    (13) instruction -> . assignment ;
    (54) loop -> . FOR expression = range block
    (55) loop -> . WHILE ( expression ) block
    (52) conditional -> . IF ( expression ) block
    (53) conditional -> . IF ( expression ) block ELSE block
    (41) assignment -> . variable DIVASSIGN expression
    (42) assignment -> . variable MULASSIGN expression
    (43) assignment -> . variable SUBASSIGN expression
    (44) assignment -> . variable ADDASSIGN expression
    (45) assignment -> . variable = expression
    (39) variable -> . reference
    (40) variable -> . ID
    (46) reference -> . expression [ expression , expression ]
    (16) expression -> . expression NEQ expression
    (17) expression -> . expression EQ expression
    (18) expression -> . expression GRTEQ expression
    (19) expression -> . expression LESEQ expression
    (20) expression -> . expression > expression
    (21) expression -> . expression < expression
    (22) expression -> . [ list ]
    (23) expression -> . ( expression )
    (24) expression -> . matrix_function
    (25) expression -> . expression / expression
    (26) expression -> . expression * expression
    (27) expression -> . expression - expression
    (28) expression -> . expression + expression
    (29) expression -> . expression DOTDIV expression
    (30) expression -> . expression DOTMUL expression
    (31) expression -> . expression DOTSUB expression
    (32) expression -> . expression DOTADD expression
    (33) expression -> . variable
    (34) expression -> . STRING
    (35) expression -> . FLOATNUM
    (36) expression -> . INTNUM
    (37) expression -> . expression '
    (38) expression -> . - expression
    (49) matrix_function -> . EYE ( list )
    (50) matrix_function -> . ONES ( list )
    (51) matrix_function -> . ZEROS ( list )
    {               shift and go to state 4
    RETURN          shift and go to state 6
    CONTINUE        shift and go to state 7
    BREAK           shift and go to state 8
    PRINT           shift and go to state 9
    FOR             shift and go to state 13
    WHILE           shift and go to state 15
    IF              shift and go to state 17
    ID              shift and go to state 20
    [               shift and go to state 21
    (               shift and go to state 16
    STRING          shift and go to state 24
    FLOATNUM        shift and go to state 25
    INTNUM          shift and go to state 26
    -               shift and go to state 23
    EYE             shift and go to state 27
    ONES            shift and go to state 28
    ZEROS           shift and go to state 29

    instructions                   shift and go to state 31
    instruction                    shift and go to state 5
    loop                           shift and go to state 10
    conditional                    shift and go to state 11
    assignment                     shift and go to state 12
    expression                     shift and go to state 14
    variable                       shift and go to state 18
    reference                      shift and go to state 19
    matrix_function                shift and go to state 22

state 5

    (5) instructions -> instruction .
    RETURN          reduce using rule 5 (instructions -> instruction .)
    CONTINUE        reduce using rule 5 (instructions -> instruction .)
    BREAK           reduce using rule 5 (instructions -> instruction .)
    PRINT           reduce using rule 5 (instructions -> instruction .)
    FOR             reduce using rule 5 (instructions -> instruction .)
    WHILE           reduce using rule 5 (instructions -> instruction .)
    IF              reduce using rule 5 (instructions -> instruction .)
    ID              reduce using rule 5 (instructions -> instruction .)
    [               reduce using rule 5 (instructions -> instruction .)
    (               reduce using rule 5 (instructions -> instruction .)
    STRING          reduce using rule 5 (instructions -> instruction .)
    FLOATNUM        reduce using rule 5 (instructions -> instruction .)
    INTNUM          reduce using rule 5 (instructions -> instruction .)
    -               reduce using rule 5 (instructions -> instruction .)
    EYE             reduce using rule 5 (instructions -> instruction .)
    ONES            reduce using rule 5 (instructions -> instruction .)
    ZEROS           reduce using rule 5 (instructions -> instruction .)
    $end            reduce using rule 5 (instructions -> instruction .)
    }               reduce using rule 5 (instructions -> instruction .)


state 6

    (7) instruction -> RETURN . list ;
    (47) list -> . expression
    (48) list -> . expression , list
    (16) expression -> . expression NEQ expression
    (17) expression -> . expression EQ expression
    (18) expression -> . expression GRTEQ expression
    (19) expression -> . expression LESEQ expression
    (20) expression -> . expression > expression
    (21) expression -> . expression < expression
    (22) expression -> . [ list ]
    (23) expression -> . ( expression )
    (24) expression -> . matrix_function
    (25) expression -> . expression / expression
    (26) expression -> . expression * expression
    (27) expression -> . expression - expression
    (28) expression -> . expression + expression
    (29) expression -> . expression DOTDIV expression
    (30) expression -> . expression DOTMUL expression
    (31) expression -> . expression DOTSUB expression
    (32) expression -> . expression DOTADD expression
    (33) expression -> . variable
    (34) expression -> . STRING
    (35) expression -> . FLOATNUM
    (36) expression -> . INTNUM
    (37) expression -> . expression '
    (38) expression -> . - expression
    (49) matrix_function -> . EYE ( list )
    (50) matrix_function -> . ONES ( list )
    (51) matrix_function -> . ZEROS ( list )
    (39) variable -> . reference
    (40) variable -> . ID
    (46) reference -> . expression [ expression , expression ]
    [               shift and go to state 21
    (               shift and go to state 16
    STRING          shift and go to state 24
    FLOATNUM        shift and go to state 25
    INTNUM          shift and go to state 26
    -               shift and go to state 23
    EYE             shift and go to state 27
    ONES            shift and go to state 28
    ZEROS           shift and go to state 29
    ID              shift and go to state 20

    list                           shift and go to state 32
    expression                     shift and go to state 33
    matrix_function                shift and go to state 22
    variable                       shift and go to state 34
    reference                      shift and go to state 19

state 7

    (8) instruction -> CONTINUE . ;
    ;               shift and go to state 35


state 8

    (9) instruction -> BREAK . ;
    ;               shift and go to state 36


state 9

    (10) instruction -> PRINT . list ;
    (47) list -> . expression
    (48) list -> . expression , list
    (16) expression -> . expression NEQ expression
    (17) expression -> . expression EQ expression
    (18) expression -> . expression GRTEQ expression
    (19) expression -> . expression LESEQ expression
    (20) expression -> . expression > expression
    (21) expression -> . expression < expression
    (22) expression -> . [ list ]
    (23) expression -> . ( expression )
    (24) expression -> . matrix_function
    (25) expression -> . expression / expression
    (26) expression -> . expression * expression
    (27) expression -> . expression - expression
    (28) expression -> . expression + expression
    (29) expression -> . expression DOTDIV expression
    (30) expression -> . expression DOTMUL expression
    (31) expression -> . expression DOTSUB expression
    (32) expression -> . expression DOTADD expression
    (33) expression -> . variable
    (34) expression -> . STRING
    (35) expression -> . FLOATNUM
    (36) expression -> . INTNUM
    (37) expression -> . expression '
    (38) expression -> . - expression
    (49) matrix_function -> . EYE ( list )
    (50) matrix_function -> . ONES ( list )
    (51) matrix_function -> . ZEROS ( list )
    (39) variable -> . reference
    (40) variable -> . ID
    (46) reference -> . expression [ expression , expression ]
    [               shift and go to state 21
    (               shift and go to state 16
    STRING          shift and go to state 24
    FLOATNUM        shift and go to state 25
    INTNUM          shift and go to state 26
    -               shift and go to state 23
    EYE             shift and go to state 27
    ONES            shift and go to state 28
    ZEROS           shift and go to state 29
    ID              shift and go to state 20

    list                           shift and go to state 37
    expression                     shift and go to state 33
    matrix_function                shift and go to state 22
    variable                       shift and go to state 34
    reference                      shift and go to state 19

state 10

    (11) instruction -> loop .
    RETURN          reduce using rule 11 (instruction -> loop .)
    CONTINUE        reduce using rule 11 (instruction -> loop .)
    BREAK           reduce using rule 11 (instruction -> loop .)
    PRINT           reduce using rule 11 (instruction -> loop .)
    FOR             reduce using rule 11 (instruction -> loop .)
    WHILE           reduce using rule 11 (instruction -> loop .)
    IF              reduce using rule 11 (instruction -> loop .)
    ID              reduce using rule 11 (instruction -> loop .)
    [               reduce using rule 11 (instruction -> loop .)
    (               reduce using rule 11 (instruction -> loop .)
    STRING          reduce using rule 11 (instruction -> loop .)
    FLOATNUM        reduce using rule 11 (instruction -> loop .)
    INTNUM          reduce using rule 11 (instruction -> loop .)
    -               reduce using rule 11 (instruction -> loop .)
    EYE             reduce using rule 11 (instruction -> loop .)
    ONES            reduce using rule 11 (instruction -> loop .)
    ZEROS           reduce using rule 11 (instruction -> loop .)
    $end            reduce using rule 11 (instruction -> loop .)
    }               reduce using rule 11 (instruction -> loop .)
    ELSE            reduce using rule 11 (instruction -> loop .)


state 11

    (12) instruction -> conditional .
    RETURN          reduce using rule 12 (instruction -> conditional .)
    CONTINUE        reduce using rule 12 (instruction -> conditional .)
    BREAK           reduce using rule 12 (instruction -> conditional .)
    PRINT           reduce using rule 12 (instruction -> conditional .)
    FOR             reduce using rule 12 (instruction -> conditional .)
    WHILE           reduce using rule 12 (instruction -> conditional .)
    IF              reduce using rule 12 (instruction -> conditional .)
    ID              reduce using rule 12 (instruction -> conditional .)
    [               reduce using rule 12 (instruction -> conditional .)
    (               reduce using rule 12 (instruction -> conditional .)
    STRING          reduce using rule 12 (instruction -> conditional .)
    FLOATNUM        reduce using rule 12 (instruction -> conditional .)
    INTNUM          reduce using rule 12 (instruction -> conditional .)
    -               reduce using rule 12 (instruction -> conditional .)
    EYE             reduce using rule 12 (instruction -> conditional .)
    ONES            reduce using rule 12 (instruction -> conditional .)
    ZEROS           reduce using rule 12 (instruction -> conditional .)
    $end            reduce using rule 12 (instruction -> conditional .)
    }               reduce using rule 12 (instruction -> conditional .)
    ELSE            reduce using rule 12 (instruction -> conditional .)


state 12

    (13) instruction -> assignment . ;
    ;               shift and go to state 38


state 13

    (54) loop -> FOR . expression = range block
    (16) expression -> . expression NEQ expression
    (17) expression -> . expression EQ expression
    (18) expression -> . expression GRTEQ expression
    (19) expression -> . expression LESEQ expression
    (20) expression -> . expression > expression
    (21) expression -> . expression < expression
    (22) expression -> . [ list ]
    (23) expression -> . ( expression )
    (24) expression -> . matrix_function
    (25) expression -> . expression / expression
    (26) expression -> . expression * expression
    (27) expression -> . expression - expression
    (28) expression -> . expression + expression
    (29) expression -> . expression DOTDIV expression
    (30) expression -> . expression DOTMUL expression
    (31) expression -> . expression DOTSUB expression
    (32) expression -> . expression DOTADD expression
    (33) expression -> . variable
    (34) expression -> . STRING
    (35) expression -> . FLOATNUM
    (36) expression -> . INTNUM
    (37) expression -> . expression '
    (38) expression -> . - expression
    (49) matrix_function -> . EYE ( list )
    (50) matrix_function -> . ONES ( list )
    (51) matrix_function -> . ZEROS ( list )
    (39) variable -> . reference
    (40) variable -> . ID
    (46) reference -> . expression [ expression , expression ]
    [               shift and go to state 21
    (               shift and go to state 16
    STRING          shift and go to state 24
    FLOATNUM        shift and go to state 25
    INTNUM          shift and go to state 26
    -               shift and go to state 23
    EYE             shift and go to state 27
    ONES            shift and go to state 28
    ZEROS           shift and go to state 29
    ID              shift and go to state 20

    expression                     shift and go to state 39
    matrix_function                shift and go to state 22
    variable                       shift and go to state 34
    reference                      shift and go to state 19

state 14

    (46) reference -> expression . [ expression , expression ]
    (16) expression -> expression . NEQ expression
    (17) expression -> expression . EQ expression
    (18) expression -> expression . GRTEQ expression
    (19) expression -> expression . LESEQ expression
    (20) expression -> expression . > expression
    (21) expression -> expression . < expression
    (25) expression -> expression . / expression
    (26) expression -> expression . * expression
    (27) expression -> expression . - expression
    (28) expression -> expression . + expression
    (29) expression -> expression . DOTDIV expression
    (30) expression -> expression . DOTMUL expression
    (31) expression -> expression . DOTSUB expression
    (32) expression -> expression . DOTADD expression
    (37) expression -> expression . '
    [               shift and go to state 40
    NEQ             shift and go to state 41
    EQ              shift and go to state 42
    GRTEQ           shift and go to state 43
    LESEQ           shift and go to state 44
    >               shift and go to state 45
    <               shift and go to state 46
    /               shift and go to state 47
    *               shift and go to state 48
    -               shift and go to state 49
    +               shift and go to state 50
    DOTDIV          shift and go to state 51
    DOTMUL          shift and go to state 52
    DOTSUB          shift and go to state 53
    DOTADD          shift and go to state 54
    '               shift and go to state 55


state 15

    (55) loop -> WHILE . ( expression ) block
    (               shift and go to state 56


state 16

    (23) expression -> ( . expression )
    (16) expression -> . expression NEQ expression
    (17) expression -> . expression EQ expression
    (18) expression -> . expression GRTEQ expression
    (19) expression -> . expression LESEQ expression
    (20) expression -> . expression > expression
    (21) expression -> . expression < expression
    (22) expression -> . [ list ]
    (23) expression -> . ( expression )
    (24) expression -> . matrix_function
    (25) expression -> . expression / expression
    (26) expression -> . expression * expression
    (27) expression -> . expression - expression
    (28) expression -> . expression + expression
    (29) expression -> . expression DOTDIV expression
    (30) expression -> . expression DOTMUL expression
    (31) expression -> . expression DOTSUB expression
    (32) expression -> . expression DOTADD expression
    (33) expression -> . variable
    (34) expression -> . STRING
    (35) expression -> . FLOATNUM
    (36) expression -> . INTNUM
    (37) expression -> . expression '
    (38) expression -> . - expression
    (49) matrix_function -> . EYE ( list )
    (50) matrix_function -> . ONES ( list )
    (51) matrix_function -> . ZEROS ( list )
    (39) variable -> . reference
    (40) variable -> . ID
    (46) reference -> . expression [ expression , expression ]
    [               shift and go to state 21
    (               shift and go to state 16
    STRING          shift and go to state 24
    FLOATNUM        shift and go to state 25
    INTNUM          shift and go to state 26
    -               shift and go to state 23
    EYE             shift and go to state 27
    ONES            shift and go to state 28
    ZEROS           shift and go to state 29
    ID              shift and go to state 20

    expression                     shift and go to state 57
    matrix_function                shift and go to state 22
    variable                       shift and go to state 34
    reference                      shift and go to state 19

state 17

    (52) conditional -> IF . ( expression ) block
    (53) conditional -> IF . ( expression ) block ELSE block
    (               shift and go to state 58


state 18

    (41) assignment -> variable . DIVASSIGN expression
    (42) assignment -> variable . MULASSIGN expression
    (43) assignment -> variable . SUBASSIGN expression
    (44) assignment -> variable . ADDASSIGN expression
    (45) assignment -> variable . = expression
    (33) expression -> variable .
    DIVASSIGN       shift and go to state 59
    MULASSIGN       shift and go to state 60
    SUBASSIGN       shift and go to state 61
    ADDASSIGN       shift and go to state 62
    =               shift and go to state 63
    [               reduce using rule 33 (expression -> variable .)
    NEQ             reduce using rule 33 (expression -> variable .)
    EQ              reduce using rule 33 (expression -> variable .)
    GRTEQ           reduce using rule 33 (expression -> variable .)
    LESEQ           reduce using rule 33 (expression -> variable .)
    >               reduce using rule 33 (expression -> variable .)
    <               reduce using rule 33 (expression -> variable .)
    /               reduce using rule 33 (expression -> variable .)
    *               reduce using rule 33 (expression -> variable .)
    -               reduce using rule 33 (expression -> variable .)
    +               reduce using rule 33 (expression -> variable .)
    DOTDIV          reduce using rule 33 (expression -> variable .)
    DOTMUL          reduce using rule 33 (expression -> variable .)
    DOTSUB          reduce using rule 33 (expression -> variable .)
    DOTADD          reduce using rule 33 (expression -> variable .)
    '               reduce using rule 33 (expression -> variable .)


state 19

    (39) variable -> reference .
    DIVASSIGN       reduce using rule 39 (variable -> reference .)
    MULASSIGN       reduce using rule 39 (variable -> reference .)
    SUBASSIGN       reduce using rule 39 (variable -> reference .)
    ADDASSIGN       reduce using rule 39 (variable -> reference .)
    =               reduce using rule 39 (variable -> reference .)
    [               reduce using rule 39 (variable -> reference .)
    NEQ             reduce using rule 39 (variable -> reference .)
    EQ              reduce using rule 39 (variable -> reference .)
    GRTEQ           reduce using rule 39 (variable -> reference .)
    LESEQ           reduce using rule 39 (variable -> reference .)
    >               reduce using rule 39 (variable -> reference .)
    <               reduce using rule 39 (variable -> reference .)
    /               reduce using rule 39 (variable -> reference .)
    *               reduce using rule 39 (variable -> reference .)
    -               reduce using rule 39 (variable -> reference .)
    +               reduce using rule 39 (variable -> reference .)
    DOTDIV          reduce using rule 39 (variable -> reference .)
    DOTMUL          reduce using rule 39 (variable -> reference .)
    DOTSUB          reduce using rule 39 (variable -> reference .)
    DOTADD          reduce using rule 39 (variable -> reference .)
    '               reduce using rule 39 (variable -> reference .)
    ,               reduce using rule 39 (variable -> reference .)
    ;               reduce using rule 39 (variable -> reference .)
    )               reduce using rule 39 (variable -> reference .)
    ]               reduce using rule 39 (variable -> reference .)
    :               reduce using rule 39 (variable -> reference .)
    {               reduce using rule 39 (variable -> reference .)
    RETURN          reduce using rule 39 (variable -> reference .)
    CONTINUE        reduce using rule 39 (variable -> reference .)
    BREAK           reduce using rule 39 (variable -> reference .)
    PRINT           reduce using rule 39 (variable -> reference .)
    FOR             reduce using rule 39 (variable -> reference .)
    WHILE           reduce using rule 39 (variable -> reference .)
    IF              reduce using rule 39 (variable -> reference .)
    ID              reduce using rule 39 (variable -> reference .)
    (               reduce using rule 39 (variable -> reference .)
    STRING          reduce using rule 39 (variable -> reference .)
    FLOATNUM        reduce using rule 39 (variable -> reference .)
    INTNUM          reduce using rule 39 (variable -> reference .)
    EYE             reduce using rule 39 (variable -> reference .)
    ONES            reduce using rule 39 (variable -> reference .)
    ZEROS           reduce using rule 39 (variable -> reference .)


state 20

    (40) variable -> ID .
    DIVASSIGN       reduce using rule 40 (variable -> ID .)
    MULASSIGN       reduce using rule 40 (variable -> ID .)
    SUBASSIGN       reduce using rule 40 (variable -> ID .)
    ADDASSIGN       reduce using rule 40 (variable -> ID .)
    =               reduce using rule 40 (variable -> ID .)
    [               reduce using rule 40 (variable -> ID .)
    NEQ             reduce using rule 40 (variable -> ID .)
    EQ              reduce using rule 40 (variable -> ID .)
    GRTEQ           reduce using rule 40 (variable -> ID .)
    LESEQ           reduce using rule 40 (variable -> ID .)
    >               reduce using rule 40 (variable -> ID .)
    <               reduce using rule 40 (variable -> ID .)
    /               reduce using rule 40 (variable -> ID .)
    *               reduce using rule 40 (variable -> ID .)
    -               reduce using rule 40 (variable -> ID .)
    +               reduce using rule 40 (variable -> ID .)
    DOTDIV          reduce using rule 40 (variable -> ID .)
    DOTMUL          reduce using rule 40 (variable -> ID .)
    DOTSUB          reduce using rule 40 (variable -> ID .)
    DOTADD          reduce using rule 40 (variable -> ID .)
    '               reduce using rule 40 (variable -> ID .)
    ,               reduce using rule 40 (variable -> ID .)
    ;               reduce using rule 40 (variable -> ID .)
    )               reduce using rule 40 (variable -> ID .)
    ]               reduce using rule 40 (variable -> ID .)
    :               reduce using rule 40 (variable -> ID .)
    {               reduce using rule 40 (variable -> ID .)
    RETURN          reduce using rule 40 (variable -> ID .)
    CONTINUE        reduce using rule 40 (variable -> ID .)
    BREAK           reduce using rule 40 (variable -> ID .)
    PRINT           reduce using rule 40 (variable -> ID .)
    FOR             reduce using rule 40 (variable -> ID .)
    WHILE           reduce using rule 40 (variable -> ID .)
    IF              reduce using rule 40 (variable -> ID .)
    ID              reduce using rule 40 (variable -> ID .)
    (               reduce using rule 40 (variable -> ID .)
    STRING          reduce using rule 40 (variable -> ID .)
    FLOATNUM        reduce using rule 40 (variable -> ID .)
    INTNUM          reduce using rule 40 (variable -> ID .)
    EYE             reduce using rule 40 (variable -> ID .)
    ONES            reduce using rule 40 (variable -> ID .)
    ZEROS           reduce using rule 40 (variable -> ID .)


state 21

    (22) expression -> [ . list ]
    (47) list -> . expression
    (48) list -> . expression , list
    (16) expression -> . expression NEQ expression
    (17) expression -> . expression EQ expression
    (18) expression -> . expression GRTEQ expression
    (19) expression -> . expression LESEQ expression
    (20) expression -> . expression > expression
    (21) expression -> . expression < expression
    (22) expression -> . [ list ]
    (23) expression -> . ( expression )
    (24) expression -> . matrix_function
    (25) expression -> . expression / expression
    (26) expression -> . expression * expression
    (27) expression -> . expression - expression
    (28) expression -> . expression + expression
    (29) expression -> . expression DOTDIV expression
    (30) expression -> . expression DOTMUL expression
    (31) expression -> . expression DOTSUB expression
    (32) expression -> . expression DOTADD expression
    (33) expression -> . variable
    (34) expression -> . STRING
    (35) expression -> . FLOATNUM
    (36) expression -> . INTNUM
    (37) expression -> . expression '
    (38) expression -> . - expression
    (49) matrix_function -> . EYE ( list )
    (50) matrix_function -> . ONES ( list )
    (51) matrix_function -> . ZEROS ( list )
    (39) variable -> . reference
    (40) variable -> . ID
    (46) reference -> . expression [ expression , expression ]
    [               shift and go to state 21
    (               shift and go to state 16
    STRING          shift and go to state 24
    FLOATNUM        shift and go to state 25
    INTNUM          shift and go to state 26
    -               shift and go to state 23
    EYE             shift and go to state 27
    ONES            shift and go to state 28
    ZEROS           shift and go to state 29
    ID              shift and go to state 20

    list                           shift and go to state 64
    expression                     shift and go to state 33
    matrix_function                shift and go to state 22
    variable                       shift and go to state 34
    reference                      shift and go to state 19

state 22
